# elo_tracker

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: bandit.yml  codeql.yml  python-ci.yml
api/: app.py  config.py  db_inspector.py  requirements.txt
api/auth/: jwt.py  security.py
api/crud/: __init__.py  base.py  character.py  finish_type.py  match.py  player.py  user.py
api/models/: __init__.py  character.py  finish_type.py  match.py  player.py  user.py
api/routes/: auth.py  helpers.py  matches.py  players.py
api/schemas/: character.py  match.py  user.py
api/services/: elo_service.py
backend/api/: index.py
backend/docs/: data_structure.md
backend/src/: main.py
backend/src/crud/: __init__.py  base.py  character.py  finish_type.py  match.py  player.py  team.py
backend/src/models/: __init__.py  character.py  match.py  player.py  sel_deifnition.md  team.py
backend/src/schemas/: __init__.py  character.py  finish_type.py  match.py  player.py  team.py
backend/tests/models/: conftest.py  test_match.py  test_player.py
backend/tests/unit_tests/: conftest.py
backend/tests/unit_tests/crud/: test_character.py  test_match.py  test_player.py  test_team.py
docs/: data_structure.md  sql_deifnition.md
tests/unit_tests/: conftest.py
tests/unit_tests/crud/: test_character.py  test_match.py  test_player.py
tests/unit_tests/models/: test_match.py  test_player.py
tests/unit_tests/schemas/: test_finish_type.py  test_match.py  test_player.py
(+7 files in other folders)
